# constellation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build.yml  release.yml
resources/: app.rc
src/: Application.cpp  Application.hpp  GuiPanel.cpp  GuiPanel.hpp  main.cpp
src/generators/: GenCRand.cpp  GenCRand.hpp  GenExponential.cpp  GenExponential.hpp  GenMT19937.cpp  GenMT19937.hpp  GenNormal.cpp  GenNormal.hpp  GenWindows.cpp  GenWindows.hpp  GeneratorFactory.cpp  GeneratorFactory.hpp  Generators.cpp  Generators.hpp  IGenerator.hpp
src/visualizations/: Display2D.cpp  Display2D.hpp  Histogram.cpp  Histogram.hpp  IVisualization.hpp
tests/: test_factory.cpp  test_generators.cpp
